tests/test_files_pa3/external/errors/WrongMainSignature3.ic
class WrongMainSignature3{
	
	static string jojo(){
		return "jojo";
	}
	
	//Error: argument should be of type string[] 
	static void main (string args){
		WrongMainSignature3.jojo();
	} 
	
}